# USP_Notebook

./: .gitignore  README.md
ACH2001/EP1/: CaixaEletronico.java
ACH2001/EP2/: Raiz.java
AED1/EP2/: 11917559.c  usaFilaPreferencial.c
AED1/EP3/src/: filaDePrioridade.c  usaFilaDePrioridade  usaFilaDePrioridade.c
AED1/Semana 1/: Semana 1.docx
AED1/Semana 11/: Semana 11.docx
AED1/Semana 2/: Semana 2.docx
AED1/Semana 4/: Semana4.docx
AED1/Semana 5/: Semana 5.docx
AED1/Semana 6/: Semana 6.docx
AED1/Semana 7/: Semana 7.docx
AED1/Semana 8/: Semana 9.docx
BTree-Java-Report-main/: .gitignore  README.md  util.java
BTree-Java-Report-main/src/: Index.java
BTree-Java-Report-main/src/models/: BTree.java  BaseEntityModel.java  Node.java
BTree-Java-Report-main/src/utils/: BTreeMethodsMetrics.java  RandomNumbersGenerator.java  TimeMeter.java
EP1/src/: ImageEx.java
IAA/EP1/: README.md
IAA/EP1/src/: Image.java  ImageEx.java  ImageTest.java  ImageTestOwner.java  Main.java
IAA/EP2/: CaminhoMaisCurto.java  CaminhoMaisLongo.java  CaminhoMaisRapido.java  CaminhoMaisValioso.java  Coordenada.java  EP2.java  Explorador.java  ICaminho.java  Item.java  Map.java  README.md  map.txt
IP/EP1/: CaixaEletronico.java
IP/EP3/: JogoDaVelha.java
Knn/: pyproject.toml
Knn/notebooks/: dataset.ipynb  knn.ipynb
MeetingManagementCOO-main/src/: Index.java
MeetingManagementCOO-main/src/entities/: GerenciadorDeSalas.java  Horario.java  MarcadorDeReuniao.java  Reserva.java  Sala.java
MeetingManagementCOO-main/src/utils/: InterseccaoReservaException.java  entrada.txt  (+4 more)
(+3 files in other folders)
